--- a/New folder/CardPage.html
+++ b/New folder/CardPage.html
@@ -36,11 +36,11 @@
                         <div class="thumbnail">
                             <div class="img_div">
                                 <img
-                                    src="https://images.unsplash.com/photo-1592595896551-12b371d546d5?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8cmVhbCUyMGVzdGF0ZXxlbnwwfHwwfHx8MA%3D%3D"
+                                    src="./images/bade_hero.jpg"
                                     alt class="thumb_img">
                             </div>
                             <div class="cap">
-                                <h4 class="text-center">Client Image</h4>
+                                <h4 class="text-center">MR. ABHISHEK BADE SIR</h4>
                             </div>
                         </div>
                     </div>
@@ -50,11 +50,12 @@
                         <div class="thumbnail">
                             <div class="img_div">
                                 <img
-                                    src="https://images.unsplash.com/photo-1592595896551-12b371d546d5?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8cmVhbCUyMGVzdGF0ZXxlbnwwfHwwfHx8MA%3D%3D"
+                                    src="./images/sutwane_hero.png"
                                     alt class="thumb_img">
                             </div>
                             <div class="cap">
-                                <h4 class="text-center">Client Image</h4>
+                                <h4 class="text-center">SUTWANE ENGLISH SCHOOL
+                                    AND JR. COLLEGE</h4>
                             </div>
                         </div>
                     </div>
@@ -64,55 +65,11 @@
                         <div class="thumbnail">
                             <div class="img_div">
                                 <img
-                                    src="https://images.unsplash.com/photo-1592595896551-12b371d546d5?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8cmVhbCUyMGVzdGF0ZXxlbnwwfHwwfHx8MA%3D%3D"
+                                    src="./images/jangid_hero.jpg"
                                     alt class="thumb_img">
                             </div>
                             <div class="cap">
-                                <h4 class="text-center">Client Image</h4>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm">
-                    <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail">
-                            <div class="img_div">
-                                <img
-                                    src="https://images.unsplash.com/photo-1592595896551-12b371d546d5?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8cmVhbCUyMGVzdGF0ZXxlbnwwfHwwfHx8MA%3D%3D"
-                                    alt class="thumb_img">
-                            </div>
-                            <div class="cap">
-                                <h4 class="text-center">Client Image</h4>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm">
-                    <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail">
-                            <div class="img_div">
-                                <img
-                                    src="https://images.unsplash.com/photo-1592595896551-12b371d546d5?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8cmVhbCUyMGVzdGF0ZXxlbnwwfHwwfHx8MA%3D%3D"
-                                    alt class="thumb_img">
-                            </div>
-                            <div class="cap">
-                                <h4 class="text-center">Client Image</h4>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm">
-                    <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail">
-                            <div class="img_div">
-                                <img
-                                    src="https://images.unsplash.com/photo-1592595896551-12b371d546d5?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8cmVhbCUyMGVzdGF0ZXxlbnwwfHwwfHx8MA%3D%3D"
-                                    alt class="thumb_img">
-                            </div>
-                            <div class="cap">
-                                <h4 class="text-center">Client Image</h4>
+                                <h4 class="text-center">MR. JANGID SIR</h4>
                             </div>
                         </div>
                     </div>
@@ -124,11 +81,11 @@
                         <div class="thumbnail">
                             <div class="img_div">
                                 <img
-                                    src="https://images.unsplash.com/photo-1592595896551-12b371d546d5?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8cmVhbCUyMGVzdGF0ZXxlbnwwfHwwfHx8MA%3D%3D"
+                                    src="./images/jogdanand_hero.jpg"
                                     alt class="thumb_img">
                             </div>
                             <div class="cap">
-                                <h4 class="text-center">Client Image</h4>
+                                <h4 class="text-center">MR. JOGDAND SIR</h4>
                             </div>
                         </div>
                     </div>
@@ -138,11 +95,11 @@
                         <div class="thumbnail">
                             <div class="img_div">
                                 <img
-                                    src="https://images.unsplash.com/photo-1592595896551-12b371d546d5?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8cmVhbCUyMGVzdGF0ZXxlbnwwfHwwfHx8MA%3D%3D"
+                                    src="./images/girish_hero.jpg"
                                     alt class="thumb_img">
                             </div>
                             <div class="cap">
-                                <h4 class="text-center">Client Image</h4>
+                                <h4 class="text-center">MR. GIRISH SWAMI</h4>
                             </div>
                         </div>
                     </div>
@@ -152,11 +109,203 @@
                         <div class="thumbnail">
                             <div class="img_div">
                                 <img
-                                    src="https://images.unsplash.com/photo-1592595896551-12b371d546d5?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8cmVhbCUyMGVzdGF0ZXxlbnwwfHwwfHx8MA%3D%3D"
+                                    src="./images/kale_hero.jpg"
                                     alt class="thumb_img">
                             </div>
                             <div class="cap">
-                                <h4 class="text-center">Client Image</h4>
+                                <h4 class="text-center">MR. KALE </h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm">
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail">
+                            <div class="img_div">
+                                <img
+                                    src="./images/mule_hero.jpg"
+                                    alt class="thumb_img">
+                            </div>
+                            <div class="cap">
+                                <h4 class="text-center">MR. RAVI MULE</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail">
+                            <div class="img_div">
+                                <img
+                                    src="./images/unknown.jpg"
+                                    alt class="thumb_img">
+                            </div>
+                            <div class="cap">
+                                <h4 class="text-center">Mr.</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail">
+                            <div class="img_div">
+                                <img
+                                    src="./images/patel_hero.jpg"
+                                    alt class="thumb_img">
+                            </div>
+                            <div class="cap">
+                                <h4 class="text-center">MR. PATEL</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm">
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail">
+                            <div class="img_div">
+                                <img
+                                    src="./images/todkar_herp.jpg"
+                                    alt class="thumb_img">
+                            </div>
+                            <div class="cap">
+                                <h4 class="text-center">MR. GANESH TODKAR</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail">
+                            <div class="img_div">
+                                <img
+                                    src="./images/shrikant_hero.jpg"
+                                    alt class="thumb_img">
+                            </div>
+                            <div class="cap">
+                                <h4 class="text-center">MR. SHRIKANT WAGH</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail">
+                            <div class="img_div">
+                                <img
+                                    src="./images/unknown2.jpg"
+                                    alt class="thumb_img">
+                            </div>
+                            <div class="cap">
+                                <h4 class="text-center">MR. </h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm">
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail">
+                            <div class="img_div">
+                                <img
+                                    src="./images/unknown3.jpg"
+                                    alt class="thumb_img">
+                            </div>
+                            <div class="cap">
+                                <h4 class="text-center">MR. </h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail">
+                            <div class="img_div">
+                                <img
+                                    src="./images/bhore_hero.jpg"
+                                    alt class="thumb_img">
+                            </div>
+                            <div class="cap">
+                                <h4 class="text-center">MR. MAYUR BHORE</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail">
+                            <div class="img_div">
+                                <img
+                                    src="./images/unknown.4.jpg"
+                                    alt class="thumb_img">
+                            </div>
+                            <div class="cap">
+                                <h4 class="text-center">MR. </h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm">
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail">
+                            <div class="img_div">
+                                <img
+                                    src="./images/shubham_hero.jpg"
+                                    alt class="thumb_img">
+                            </div>
+                            <div class="cap">
+                                <h4 class="text-center">MR. SUBHASH JADHAV</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail">
+                            <div class="img_div">
+                                <img
+                                    src="./images/shubham_hero2.jpg"
+                                    alt class="thumb_img">
+                            </div>
+                            <div class="cap">
+                                <h4 class="text-center">MR. SUBHASH JADHAV</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail">
+                            <div class="img_div">
+                                <img
+                                    src="./images/unknown5.jpg"
+                                    alt class="thumb_img">
+                            </div>
+                            <div class="cap">
+                                <h4 class="text-center">MR. </h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm">
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail">
+                            <div class="img_div">
+                                <img
+                                    src="./images/swant_hero.jpg"
+                                    alt class="thumb_img">
+                            </div>
+                            <div class="cap">
+                                <h4 class="text-center">MR. SAWANT</h4>
                             </div>
                         </div>
                     </div>
